# Coding-Challenge---Embedded-Intent-Recognizer

./: .gitignore  CMakeLists.txt  README.md
data/: Word2Intent.json
src/: Intent.cpp  Intent.h  IntentFactory.cpp  IntentFactory.h  IntentRecognizer.cpp  IntentRecognizer.h  IntentRecognizerInterface.h  TrieWithIntents.cpp  TrieWithIntents.h  main.cpp
tst/: CMakeLists.txt  testIntentRecognizer.cpp
